force-app/main/default/objects/Room__c/Room__c.object-meta.xml
<CustomObject><deploymentStatus>Deployed</deploymentStatus><description>Room management for office spaces</description><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Room</label><nameField><label>Room Name</label><type>Text</type></nameField><pluralLabel>Rooms</pluralLabel><sharingModel>ReadWrite</sharingModel><visibility>Public</visibility></CustomObject>