force-app/main/default/objects/Room__c/fields/Capacity__c.field-meta.xml
<CustomField><fullName>Capacity__c</fullName><description>Maximum number of people the room can accommodate</description><externalId>false</externalId><label>Capacity</label><precision>3</precision><required>false</required><scale>0</scale><trackHistory>false</trackHistory><trackTrending>false</trackTrending><type>Number</type><unique>false</unique></CustomField>