force-app/main/default/objects/Room__c/fields/Floor__c.field-meta.xml
<CustomField><fullName>Floor__c</fullName><description>Floor number where the room is located</description><externalId>false</externalId><label>Floor</label><length>50</length><required>false</required><trackHistory>false</trackHistory><trackTrending>false</trackTrending><type>Text</type><unique>false</unique></CustomField>