force-app/main/default/objects/Room__c/fields/Room_Type__c.field-meta.xml
<CustomField><fullName>Room_Type__c</fullName><description>Type of room - Conference, Meeting, Office, etc.</description><externalId>false</externalId><label>Room Type</label><required>false</required><trackHistory>false</trackHistory><trackTrending>false</trackTrending><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Conference Room</fullName><default>false</default><label>Conference Room</label></value><value><fullName>Meeting Room</fullName><default>false</default><label>Meeting Room</label></value><value><fullName>Office</fullName><default>false</default><label>Office</label></value><value><fullName>Training Room</fullName><default>false</default><label>Training Room</label></value></valueSetDefinition></valueSet></CustomField>